--- a/index.mdx
+++ b/index.mdx
@@ -4,17 +4,17 @@ title: Introduction
 
 ## Welcome to Channel3
 
-Channel3 enables developers to build AI shopping apps and agents. Whether you're creating a smart recommendation engine, a visual search tool, or an agent that purchases products autononmously, Channel3 can power it.
+Channel3 lets developers build AI shopping apps and agents. Whether you're creating a smart recommendation engine, a visual search tool, an agent that purchases products autononmously, or something totally new,Channel3 can power it.
 
 **What can you do with Channel3?**
--   **Search a Vast Catalog:** Access nearly every product on the web.
--   **Natural Language Search:** Let users search just like they talk (e.g., "warm winter coat for hiking").
--   **Visual Search:** Allow users to find products using an image. Got a photo of cool sneakers? Find similar ones!
+-   **Create Your Own Catalog:** Curate a catalog of brands and products.
+-   **Natural Language Search:** Search like you talk (e.g., "warm winter coat for hiking").
+-   **Visual Search:** Find products with an image. This can power a visual search engine, or a visual shopping assistant.
 -   **Multimodal Search:** Combine text *and* images for ultra-precise queries (e.g., "blue version of this dress" + image of the dress).
 -   **Recommend Products:** Intelligently suggest items your users will love.
 -   **Earn Revenue:** Monetize when your customers make purchases.
 
-Channel3 makes it easy to build AI shopping apps and agents. Let's get you started!
+Let's get you started!
 
 ## Getting Started: Your First Steps
 
@@ -27,21 +27,18 @@ Setting up with Channel3 is easy. Get started in just a few steps:
       Use your Google account, GitHub, or email to sign up. No credit card required - <i>we're paying you, remember?</i>
     </Card>
   </Step>
-  <Step title="Grab Your API Key">
+  <Step title="Generate Your API Key">
     Your API key identifies you to Channel3. We use it to track the sales you drive, so you can get paid.
     <Card title="Go to API Keys in Dashboard" icon="key" href="https://trychannel3.com/dashboard/api">
       Generate a new API key, and keep it safe.
     </Card>
-    <Warning>
-      Don't share this API key publicly or embed it directly in frontend code that users can see.
-    </Warning>
   </Step>
   <Step title="Consider Your Use-Case">
     <CardGroup cols={2}>
-      <Card title="Building an Agent?" icon="robot" href="/mcp">
+      <Card title="Building an Agent?" icon="robot" href="/mcp-overview">
         Simply add our MCP to your agent.
       </Card>
-      <Card title="Building an App?" icon="code" href="/typescript-sdk">
+      <Card title="Building an App?" icon="code" href="/python-sdk">
         Explore our SDKs, or call our API directly.
       </Card>
     </CardGroup>
