--- a/mcp-overview.mdx
+++ b/mcp-overview.mdx
@@ -9,16 +9,6 @@ Model Context Protocol (MCP) is a standard that allows AI agents to securely con
 
 The Channel3 MCP specifically gives your AI agents superpowers for product discovery. Your agent can search through millions of real products in real-time, complete with current prices, rich images, detailed descriptions, and real-time availability.
 
-## Why Use an MCP?
-
-**Real-time Data**: Your agents get access to live product information, not stale training data from months ago.
-
-**Enhanced Capabilities**: Transform your AI from a conversational tool into an action-oriented shopping assistant.
-
-**Revenue Generation**: Earn commissions when users purchase products your agent recommends.
-
-**Better User Experience**: Provide specific, actionable recommendations with direct purchase links rather than vague suggestions.
-
 ## Example Projects You Could Build
 
 <CardGroup cols={2}>
@@ -43,17 +33,27 @@ The Channel3 MCP specifically gives your AI agents superpowers for product disco
 
 Ready to add product search capabilities to your AI agent? Here's how to get set up:
 
-**Step 1**:
-<Card title = "Create an account" icon="user" href="https://trychannel3.com/sign-up">
-  Create an account to curate your catalog and track payouts. It's free to get started!
-</Card>
+## Getting Started: Your First Steps
 
-**Step 2**:
-<Card title = "Create an API Key" icon="key" href="https://trychannel3.com/dashboard/api">
-  Your API Key will be used to authenticate your requests to the Channel3 MCP and ensure purchases get attributed to your account.
-</Card>
+Setting up with Channel3 is easy. Get started in just a few steps:
 
-**Step 3**: Add the Channel3 MCP to your agent.
+<Steps>
+  <Step title="Create Your Free Account">
+    First things first, you'll need a Channel3 account. This is where you'll manage your API keys, track usage, and more.
+    <Card title="Sign Up for Channel3" icon="user-plus" href="https://trychannel3.com/sign-up">
+      Use your Google account, GitHub, or email to sign up. No credit card required - <i>we're paying you, remember?</i>
+    </Card>
+  </Step>
+  <Step title="Generate Your API Key">
+    Your API key identifies you to Channel3. We use it to track the sales you drive, so you can get paid.
+    <Card title="Go to API Keys in Dashboard" icon="key" href="https://trychannel3.com/dashboard/api">
+      Generate a new API key, and keep it safe.
+    </Card>
+  </Step>
+  <Step title="Add the Channel3 MCP to your agent.">
+    Our MCP is compatible with all popular MCP clients, such as OpenAI and Claude.
+  </Step>
+</Steps>
 
 Choose your setup method based on your preferred platform:
 
