--- a/typescript-sdk.mdx
+++ b/typescript-sdk.mdx
@@ -1,9 +1,7 @@
 ---
 title: 'TypeScript/JavaScript SDK Quickstart'
-description: 'Get started with the Channel3 TypeScript/JavaScript SDK for powerful product search and discovery.'
+description: "This guide will help you install, set up, and use the SDK to integrate Channel3's product search capabilities into your web and Node.js applications."
 ---
-
-Welcome to the Channel3 TypeScript/JavaScript SDK! This guide will help you install, set up, and use the SDK to integrate Channel3's product search capabilities into your web and Node.js applications.
 
 ## Installation
 
@@ -30,7 +28,7 @@ pnpm add channel3-sdk
 
 You'll need an API key to authenticate your requests to the Channel3 API.
 
-<Card title="Get your API key" icon="key" href="https://trychannel3.com/dashboard/api">
+<Card title="Generate Your API Key" icon="key" href="https://trychannel3.com/dashboard/api">
   Grab your API key from your Channel3 dashboard if you haven't already.
 </Card>
 
